Bug 96943 - Hide whitespace mode: new page is inserted for window/orphan-controlled paragraph
Summary: Hide whitespace mode: new page is inserted for window/orphan-controlled parag...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.2.0 target:5.1.1
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-07 12:45 UTC by Miklos Vajna
Modified: 2016-10-25 19:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Reproducer document (8.59 KB, application/vnd.oasis.opendocument.text)
2016-01-07 12:45 UTC, Miklos Vajna
Details
How it looks like currently (5.09 KB, image/png)
2016-01-07 12:59 UTC, Miklos Vajna
Details
How it should look like, I guess. (4.61 KB, image/png)
2016-01-07 12:59 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2016-01-07 12:45:07 UTC
Created attachment 121775 [details]
Reproducer document

How to reproduce:

1) Start Writer.
2) View -> Hide Whitespace
3) Go to the end of the document and press "d" once.

Expected: the content fits a single page.

Actual: a new page gets created for the new line.
Comment 1 Miklos Vajna 2016-01-07 12:59:21 UTC
Created attachment 121778 [details]
How it looks like currently
Comment 2 Miklos Vajna 2016-01-07 12:59:35 UTC
Created attachment 121779 [details]
How it should look like, I guess.
Comment 3 Miklos Vajna 2016-01-07 13:05:59 UTC
This is really similar to bug 96515.
Comment 4 Commit Notification 2016-01-07 14:14:32 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6d8da2b2deb4be2182ca1852cec7eb38a4c654eb

tdf#96943 sw Hide Whitespace: don't create pages for widow / orphan ...

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2016-01-07 14:14:35 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=59ae2d11d5884ffdf77dec95d8cd2566943fd789

Related: tdf#96943 sw Hide Whitespace: add HandleWhitespaceHiddenDiff()

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-01-21 13:28:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=258f344021e7a229ae146e0214af19e45c59c032&h=libreoffice-5-1

tdf#96943 sw Hide Whitespace: don't create pages for widow / orphan ...

It will be available in 5.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.