tdf#96943 sw Hide Whitespace: don't create pages for widow / orphan ...

... paragraphs that would otherwise fit nominal size of the page frame

(cherry picked from commits 6d8da2b2deb4be2182ca1852cec7eb38a4c654eb and
59ae2d11d5884ffdf77dec95d8cd2566943fd789)

Conflicts:
	sw/qa/extras/uiwriter/uiwriter.cxx

Change-Id: I90c3de9150b17c951e1ac4158babb7a71afee9ee
Reviewed-on: https://gerrit.libreoffice.org/21445
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Ashod Nakashian <ashnakash@gmail.com>
Tested-by: Ashod Nakashian <ashnakash@gmail.com>