sw/source/core/layout/calcmove.cxx
@@ -1522,32 +1522,12 @@ void SwContentFrame::MakeAll(vcl::RenderContext* /*pRenderContext*/)
         const long nPrtBottom = (GetUpper()->*fnRect->fnGetPrtBottom)();
         long nBottomDist = (Frame().*fnRect->fnBottomDist)(nPrtBottom);
 
-        SwViewShell* pShell = getRootFrame()->GetCurrShell();
-        if (pShell && pShell->GetViewOptions()->IsWhitespaceHidden())
-        {
-            // When whitespace is hidden, the page frame has two heights: the
-            // nominal (defined by the frame format), and the actual (which is
-            // at most the nominal height, but can be smaller in case there is
-            // no content for the whole page).
-            // The layout size is the actual one, but we want to move the
-            // content frame to a new page only in case it doesn't fit the
-            // nominal size.
-            if (nBottomDist < 0)
-            {
-                // Content frame doesn't fit the actual size, check if it fits the nominal one.
-                SwPageFrame* pPageFrame = FindPageFrame();
-                const SwFrameFormat* pPageFormat = static_cast<const SwFrameFormat*>(pPageFrame->GetRegisteredIn());
-                const Size& rPageSize = pPageFormat->GetFrameSize().GetSize();
-                long nWhitespace = rPageSize.getHeight() - pPageFrame->Frame().Height();
-                if (nWhitespace > -nBottomDist)
-                {
-                    // It does: don't move it and invalidate our page frame so
-                    // that it gets a larger height.
-                    nBottomDist = 0;
-                    pPageFrame->InvalidateSize();
-                }
-            }
-        }
+        // Hide whitespace may require not to insert a new page.
+        SwPageFrame* pPageFrame = FindPageFrame();
+        long nOldBottomDist = nBottomDist;
+        pPageFrame->HandleWhitespaceHiddenDiff(nBottomDist);
+        if (nOldBottomDist != nBottomDist)
+            pPageFrame->InvalidateSize();
 
         if( nBottomDist >= 0 )
         {
